[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "video-mamba"
version = "0.1.0"
description = "Multi-modality video understanding models and training scripts built around VideoMamba."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch>=2.10.0.dev",
    "timm>=1.0.22",
    "numpy>=2.4.0",
    "einops>=0.6",
    "mamba-ssm @ git+https://github.com/state-spaces/mamba",
    "causal-conv1d @ git+https://github.com/Dao-AILab/causal-conv1d",
    "apex @ git+https://github.com/NVIDIA/apex"
]

[project.optional-dependencies]
training = [
    "pyyaml>=6.0",
    "scipy>=1.16.3",
    "fvcore>=0.1.5.post20221221",
    "deepspeed>=0.18.3",
    "wandb>=0.23.1",
    "termcolor>=3.2.0",
]
dev = [
    "pytest",
    "black",
    "isort",
    "ruff>=0.15.0",
    "pyright>=1.1.408",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
namespaces = true
include = ["models*", "utils*"]

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py312"
extend-exclude = [".venv", "video_mamba.egg-info"]

[tool.pyright]
include = ["models", "utils", "scripts"]
exclude = [".venv", "video_mamba.egg-info", "**/__pycache__"]
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"
