[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "video-mamba"
version = "0.1.0"
description = "VideoMamba backbone utility for video applications with Mamba state-space blocks."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch>=2.4,<2.12",
    "timm>=1.0.22",
    "numpy>=2.4.0",
    "einops>=0.6",
    "mamba-ssm==2.2.6.post3",
    "causal-conv1d==1.5.4",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "ruff>=0.15.0",
    "pyright>=1.1.408",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
namespaces = true
include = ["models*", "utils*"]

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py312"
extend-exclude = [".venv", "video_mamba.egg-info"]

[tool.pyright]
include = ["models", "utils", "scripts"]
exclude = [".venv", "video_mamba.egg-info", "**/__pycache__"]
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"
