[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "video-mamba"
version = "0.1.0"
description = "VideoMamba backbone utility for video applications with Mamba state-space blocks."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch @ https://pytorch.org",
    "timm @ git+https://github.com",
    "numpy @ git+https://github.com",
    "einops @ git+https://github.com",
    "mamba-ssm @ git+https://github.com",
    "causal-conv1d @ git+https://github.com",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "ruff>=0.15.0",
    "pyright>=1.1.408",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
namespaces = true
include = ["models*", "utils*", "video_mamba*"]

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py312"
extend-exclude = [".venv", "video_mamba.egg-info"]

[tool.pyright]
include = ["models", "utils", "scripts", "video_mamba"]
exclude = [".venv", "video_mamba.egg-info", "**/__pycache__"]
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"
